# http-cgi-server

./: README.md
task-http/: build.sh  meson.build  run.sh
task-http/include/: cgihandler.hpp  config.hpp
task-http/include/net/: serversocket.hpp  socket.hpp
task-http/include/net/http/: message.hpp  method.hpp  request.hpp  response.hpp  status.hpp
task-http/include/server/: session.hpp
task-http/lang/: main.cpp  meson.build
task-http/lang/include/: ast.h  cgi_handler.h  interpreter.h  lexer.h  parser.h  scope.h  value.h
task-http/lang/src/: ast.cpp  cgi_handler.cpp  interpreter.cpp  lexer.cpp  parser.cpp  scope.cpp  value.cpp
task-http/src/: cgihandler.cpp  meson.build  server.cpp  session.cpp
task-http/src/net/: meson.build  socket.cpp
task-http/src/net/http/: meson.build  message.cpp  method.cpp  request.cpp  response.cpp
task-http/www/: index.html
task-http/www/cgi-bin/: scriptlang
